Fix: Get resume button dark mode style

--- a/src/style/globals.css
+++ b/src/style/globals.css
@@ -118,7 +118,7 @@
     box-shadow:
       inset 0 0.5px hsla(266, 36%, 60%, 1),
       inset 0 -1px 2px 0 hsla(0, 0%, 0%, 0.5),
-      0px 4px 10px -4px hsla(0 0% 0% / calc(1 - var(--active, 0))),
+      0px 4px 10px -4px hsla(0 0% 0% / calc(1 - var(--active, 0.75))),
       0 0 0 calc(var(--active, 0) * 0.375rem) hsl(260 97% 50% / 0.75);
 
     transition: all var(--transtion);
@@ -205,7 +205,7 @@
 
       transform-origin: center;
 
-      color: hsl(0, 0%, 100%);
+      color: hsl(var(--foreground));
 
       &:nth-child(1) {
         --scale_path_1: 1.2;
@@ -229,11 +229,10 @@
 
     background-image: linear-gradient(
       90deg,
-      hsla(0 0% 100% / 1) 0%,
-      hsla(0 0% 100% / var(--active, 0)) 150%
+      hsla(var(--foreground) / 1) 0%,
+      hsla(var(--foreground) / var(--active, 0)) 200%
     );
     background-clip: text;
-
     color: transparent;
   }
 }
